# boltip-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
archlinux/: PKGBUILD
src/: main.rs  output.rs
