[package]
name = "public-ip-getter-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2", features = ["json"] }
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
fastrand = "2"

