[package]
name = "boltip"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"
categories = ["command-line-utilities"]
keywords = ["command-line", "cli"]
readme = "README.md"
repository = "https://github.com/walker84837/boltip-rs"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
fastrand = "2.0"
anyhow = "1.0"
clap = { version = "4.5.9", features = ["derive"] }
simple_logger = "5.0.0"
log = "0.4.22"
